# football-analytics

./: .env.example  .gitignore  NEXT_STEPS_PLAN.md  README.md  SECURITY.md  feed.xml  index.html  netlify.toml  pyproject.toml  requirements.txt
.github/workflows/: deploy-pages.yml  jekyll-gh-pages.yml
analysis/2026/04/18/xg-decline-not-bad-luck/: index.html
docs/: README.md
docs/status/: DEEP_DIVE_PLAN.md  PROJECT_STATUS.md
notebooks/: 01_statistical_comparison.ipynb  02_game_state_tactics.ipynb  03_pressing_analysis.ipynb  04_xg_analysis.ipynb  05_wirtz_integration.ipynb  06_second_half.ipynb
scripts/: 01_collect_fixtures.py  01_collect_fixtures_optimized.py  01_collect_fixtures_quick.py  02_collect_match_data.py  03_process_match_data.py  04_fetch_type_mappings.py  05_process_statistics_scores.py  06_fetch_understat_xg.py  07_fetch_fbref_ppda.py  check_api_connection.py  generate_match_timeline.py
scripts/analysis/: 01_statistical_comparison.py  02_game_state_tactics.py  03_pressing_analysis.py  04_xg_analysis.py  05_wirtz_integration.py  06_second_half.py
scripts/legacy/: check_available_data.py  collect_all_fixtures.py  collect_match_data.py  explore_api.py  explore_seasons.py  fetch_complete_fixture.py  find_2025_26_season.py  find_2025_26_season_v2.py  find_fixtures.py  find_liverpool_fixtures.py  find_season_id.py  find_season_ids.py  test_ball_coordinates.py  test_recent_ball_coordinates.py  verify_seasons.py
scripts/utils/: check_subscription.py  fetch_metadata.py
src/football_analytics/: __init__.py  api_client.py  data_processor.py
src/football_analytics/collectors/: __init__.py  base.py  fixtures.py  match_data.py
src/football_analytics/processors/: __init__.py  ball_coordinates.py  events.py  formations.py  player_database.py  scores.py  statistics.py
src/football_analytics/utils/: __init__.py  backup.py  data_quality.py  file_io.py  logging_utils.py  manifest.py  rate_limiter.py
src/liverpool_strategy/: __init__.py
src/liverpool_strategy/analysis/: __init__.py  game_state.py  notebook_helpers.py
tests/: test_api_client.py
tests/unit/: test_collectors.py  test_utils.py
web/: _config.yml  index.html  index.md
web/_includes/: head.html
web/_layouts/: default.html  post.html
web/_posts/: 2026-04-18-xg-decline-not-bad-luck.md
web/assets/css/: style.css
web/liverpool/: index.md
web/liverpool/decline/: index.md
web/methodology/: index.md
