[tool.poetry]
name = "football-analytics"
version = "0.1.0"
description = "Football data analysis for European leagues using SportsMonk API"
authors = ["Gaurav Ahlawat"]
readme = "README.md"
packages = [
    {include = "football_analytics", from = "src"},
    {include = "liverpool_strategy", from = "src"},
    {include = "bot", from = "src"}
]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pandas = "^2.2.0"
python-dotenv = "^1.0.0"
mplsoccer = "^1.6.1"
tweepy = "^4.16.0"

[tool.poetry.group.analysis.dependencies]
scipy = "^1.13"
matplotlib = "^3.9"
seaborn = "^0.13"
numpy = "^1.26"
jupyter = "^1.0"
ipykernel = "^6.29"
# Tier 2 (xG enrichment): installed via pip due to certifi pin conflicts
# understatapi = "^0.7.1"
# Tier 3 (tactical metrics): installed via pip due to certifi constraints
# soccerdata = "^1.8.8"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.1.0"
ruff = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []
fixable = ["ALL"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --strict-markers"
